# InventoryModels

./: .gitignore  README.md  SampleDiagnosticLabInventory.csv  SampleDiagnosticTestOrders.csv  app.py  docker-compose.yml  forecast_model.pckl  latest.dump  modeling.py  models.py  package-lock.json  package.json  predictions.py  requirements.txt  run.py  saved_model.pkl  setup.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_sample_tracking.py  0003_inventory.py  0004_experiments.py
backend/src/app/: main.py
backend/src/app/api/v1/: auth.py  containers.py  experiments.py  inventory.py  reports.py  router.py  samples.py  users.py
backend/src/app/core/: config.py  deps.py  forecasting.py  security.py
backend/src/app/db/: base.py  session.py
backend/src/app/models/: audit.py  container.py  experiment.py  inventory.py  sample.py  user.py
backend/src/app/schemas/: container.py  experiment.py  inventory.py  sample.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  tokens.ts
frontend/src/hooks/: useDisclosure.ts
frontend/src/pages/ContainersPage/: ContainersPage.module.css  ContainersPage.tsx
frontend/src/pages/DashboardPage/: DashboardPage.module.css  (+1 more)
frontend/src/store/: auth.ts
src/: App.tsx  index.tsx  react-app-env.d.ts
src/components/pages/: InventoryPage.tsx  LoginPage.tsx  MainPage.tsx  ModelingInformationPage.tsx  PredictionPage.tsx  SalesPage.tsx
src/hooks/: index.tsx
src/requests/: index.ts
src/types/: index.d.ts
(+45 files in other folders)
