[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "RebekahMars",email = "47405076+RebekahMars@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "boto3 (>=1.43.10,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.0,<3.0)",
    "python-multipart (>=0.0.9,<1.0)",
    "bcrypt (>=4.0,<5.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.13,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-postgresql (>=8.1.0,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
